# deadbeef-fb

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  PKGBUILD.in  README  autogen.sh  configure.ac  filebrowser.c  filebrowser.h  makeaur.sh  makerelease.sh  maketag.sh  utils.c  utils.h
